<resources>
    <string name="app_name">Online Shopping Store</string>
    <string name="title_activity_merchant_actuvity">MerchantActuvity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="details">Business Details</string>
    <string name="businessName">Business Name</string>
    <string name="businessLocation">Business Location</string>
    <string name="businessTaxNumber">Tax Number</string>
    <string name="businessPhone">Phone Number</string>
    <string name="Continue">Continue</string>
    <string name="productInfo">Product Information</string>
    <string name="productName">Name</string>
    <string name="productType">Type</string>
    <string name="productPrice">PRICE</string>
    <string name="productQuantity">Quantity</string>
    <string name="productDescription">Description</string>
    <string name="ProductImageContentDescription">Product Image</string>
    <string name="prodName">Product Name</string>
    <string name="prodPrice">Product Price</string>
    <string name="recyclerImage">User Image</string>
</resources>