<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/charcoal"
    tools:context=".Business_Details_Step_1">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/edit_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:id="@+id/lblHeader"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/txtBusinessName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="8dp"
                android:hint="@string/businessName"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/txtLocation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/ic_baseline_location_on_24"
                android:drawablePadding="8dp"
                android:hint="@string/businessLocation"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/txtTax"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/ic_baseline_confirmation_number_24"
                android:drawablePadding="8dp"
                android:hint="@string/businessTaxNumber"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/ic_baseline_local_phone_24"
                android:drawablePadding="8dp"
                android:hint="@string/businessPhone"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lightGreen"
                android:text="@string/Continue"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>