<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/charcoal"
    tools:context=".Add_New_Product">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/edit_text">

        <LinearLayout
            android:id="@+id/rootContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productInfo"
                android:id="@+id/lblHeader"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/myConstraint"
                android:layout_gravity="center"
                android:padding="24dp">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ProductImageContentDescription"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/product" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/txtProductName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="name"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/ic_baseline_view_list_24"
                android:drawablePadding="8dp"
                android:hint="@string/productName"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/txtType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="text"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/ic_baseline_view_list_24"
                android:drawablePadding="8dp"
                android:hint="@string/productType"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:textAlignment="center" >

                <EditText
                    android:id="@+id/txtPrice"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="text"
                    android:background="@drawable/edit_text"
                    android:drawableStart="@drawable/ic_baseline_attach_money_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/productPrice"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <EditText
                    android:id="@+id/txtQuantity"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:autofillHints="text"
                    android:background="@drawable/edit_text"
                    android:drawableStart="@drawable/ic_baseline_view_list_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/productQuantity"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>


            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textSize="22sp"
                android:ems="20"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:autofillHints="name"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:hint="@string/productDescription"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"/>

            <Button
                android:id="@+id/btnToNext"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/lightGreen"
                android:text="@string/Continue"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>